# Horizon

./: .env.example  .gitignore  CLAUDE.md  Caddyfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260423_1100_plan5d_audit_log.py  (+31 more)
backend/app/: config.py  db.py  deps.py  logging_config.py  main.py  security.py
backend/scripts/: check.ps1  check.sh
backend/tests/: conftest.py  test_admin_audit_merge_filter.py  test_api_auth_f2.py  test_api_bank_accounts_f2.py  test_api_bootstrap_f2.py  test_api_categories.py  test_api_commitments_aggregates.py  test_api_commitments_bulk_cancel.py  test_api_commitments_suggest.py  test_api_counterparties.py  test_api_counterparties_aggregates.py  test_api_counterparties_create.py  test_api_dashboard.py  test_api_entities_f2.py  test_api_forecast.py  test_api_imports_list.py  test_api_imports_post.py  test_api_me_f2.py  test_api_rules_apply.py  test_api_rules_create.py  test_api_rules_from_transactions.py  test_api_rules_list.py  test_api_rules_mutate.py  test_api_rules_permissions.py  test_api_rules_preview.py  test_api_rules_reorder.py  test_api_transactions.py  test_api_transactions_bulk.py  test_api_user_entity_access.py  test_api_users_f2.py  test_audit_auth_f3.py  test_bank_accounts_reader.py  test_categorization_parent_filter.py  test_category_kind.py  test_config.py  test_conftest_fixtures.py  test_coverage_plan1.py  test_data_anchor.py  test_db_connection.py  test_deps.py  (+66 more)
(+345 files in other folders)
