[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tresorerie-backend"
version = "0.1.0"
description = "Backend de l'outil de gestion de trésorerie"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110,<1",
    "uvicorn[standard]>=0.29,<1",
    "sqlalchemy>=2.0,<3",
    "psycopg[binary]>=3.1,<4",
    "alembic>=1.13,<2",
    "pydantic>=2.6,<3",
    "pydantic-settings>=2.2,<3",
    "argon2-cffi>=23.1,<24",
    "python-multipart>=0.0.9",
    "email-validator>=2.1,<3",
    "slowapi>=0.1.9,<1",
    "itsdangerous>=2.1,<3",
    "pdfplumber>=0.11.4",
    "rapidfuzz>=3.9.0",
    "python-magic>=0.4.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=4.1,<5",
    "httpx>=0.27,<1",
    "ruff>=0.4,<1",
    "mypy>=1.10,<2",
    "reportlab>=4.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --strict-markers --cov=app --cov-report=term-missing"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
